Fixed smaller errors and several warnings.